k8s/go-svc-cluserip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: go-svc
  name: go-svc
spec:
  ports:
  - name: tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: go
  type: ClusterIP
status:
  loadBalancer: {}
