k8s/ingress.yaml
# Ingress resource for the application
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-web-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: go-web-app.com
    http:
      paths: 
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-svc
            port:
              number: 8080
